--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "frontend-movies",
-	"proxy": "https://backend-movies123.herokuapp.com/",
+	"proxy": "http://127.0.0.1:5000",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -16,7 +16,6 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-google-login": "^5.2.2",
-		"react-loading-skeleton": "^3.0.2",
 		"react-paginate": "^8.1.0",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
