--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "frontend-movies",
-	"proxy": "http://127.0.0.1:5000",
+	"proxy": "http://127.0.0.1:5000/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -35,21 +35,10 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": [ "react-app", "react-app/jest" ]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	}
 }
