--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^0.24.0",
 		"i": "^0.3.7",
 		"npm": "^8.4.1",
+		"node-vibrant": "^3.1.5",
 		"pure-react-carousel": "^1.27.8",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -35,10 +36,21 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [ "react-app", "react-app/jest" ]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
